Fixed title/desc spacing on gallery item hover

--- a/src/style/gallery.css
+++ b/src/style/gallery.css
@@ -113,7 +113,7 @@
 }
 
 .gallery_item_info_description {
-	margin: 4vh;
+	margin: 1.4vh 4vh 4vh 4vh;
 	color: #ffffff;
 	font-size: 1.5vh;
 	font-weight: 500;
